--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
@@ -16,8 +13,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.64.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.64.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-react-app": "^7.0.1"
   }
 }
